# rust-game-of-life

./: Cargo.toml  README.md
config/: Default.toml
src/: main.rs  settings.rs
src/entities/: cell.rs  field.rs  mod.rs  state.rs  timer.rs
src/field_2d/: field.rs  mod.rs  types.rs
src/game/: mod.rs  plugin.rs  renderer.rs
src/settings/: global.rs  local.rs  mod.rs  parser.rs
